--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   http: ^0.12.0+2
+  path_provider: ^2.0.2
   #datetime
   intl: ^0.16.1
 
