--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_svg: ^0.22.0
   http: ^0.12.0+2
   path_provider: ^2.0.2
+  encrypt: ^5.0.0
   #datetime
   intl: ^0.16.1
 
